Update for deployment

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,11 @@
   <base href="/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A video sharing application">
+  <meta name="description" content="For10Cloud">
+  <meta property="og:title" content="For10Cloud Video">
+  <meta property="og:description" content="Cloud Storage WebApplication">
+  <meta property="og:image" content="/thumbnail.png">
+  <link rel="canonical" href="https://for10cloud.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Sharing App</title>
 
